--- a/luban-cloud-public/pom.xml
+++ b/luban-cloud-public/pom.xml
@@ -19,6 +19,7 @@
         <module>order</module>
         <module>power1</module>
         <module>eureka</module>
+        <module>eureka3000</module>
     </modules>
 
 
